--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <script src="//g.alicdn.com/fdilab/lib3rd/viewport-units-buggyfill/0.6.2/??viewport-units-buggyfill.hacks.min.js,viewport-units-buggyfill.min.js"></script>
     <!-- 兼容其他移动端 -->
 
-    <title>北京同仁堂</title>
+    <title>react-mobile</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
