--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1111314_yz2cyhfr14o.css">
     <script src="//g.alicdn.com/fdilab/lib3rd/viewport-units-buggyfill/0.6.2/??viewport-units-buggyfill.hacks.min.js,viewport-units-buggyfill.min.js"></script>
     <!-- 兼容其他移动端 -->
+    
+    <link href="https://vjs.zencdn.net/7.5.4/video-js.css" rel="stylesheet">
 
     <title>react-mobile</title>
   </head>
@@ -51,5 +53,7 @@
         });
       }
     </script>
+    
+    <script src='https://vjs.zencdn.net/7.5.4/video.js'></script>
   </body>
 </html>
